--- a/front/src/app/core/footer/footer.component.html
+++ b/front/src/app/core/footer/footer.component.html
@@ -8,7 +8,7 @@
       <section class="footer-links">
           <h3>Enlaces Útiles</h3>
           <ul>
-              <li><a href="/cursos">Cursos</a></li>
+              <li><a href="/courses">Cursos</a></li>
               <li><a href="/nosotros">Sobre Nosotros</a></li>
               <li><a href="/contacto">Contacto</a></li>
               <li><a href="/faq">Preguntas Frecuentes</a></li>
