--- a/front/src/app/core/header/header.component.css
+++ b/front/src/app/core/header/header.component.css
@@ -119,8 +119,9 @@ header {
 .dropdown-menu {
   display: none;
   position: absolute;
-  top: 100%;
-  left: 0;
+  top: 100%; /* Coloca el dropdown debajo del botón */
+  right: 0; /* Alinea el borde derecho del menú al borde derecho del botón */
+  transform: translateX(0); /* No hay desplazamiento horizontal */
   background-color: #6564CC; /* Violeta */
   color: #ffffff;
   border-radius: 5px;
