Se agregan funcionalidades de asignar rol docente, editar informacion del curso y parte de la vista de un curso

--- a/front/src/app/core/side-bar/side-bar.component.html
+++ b/front/src/app/core/side-bar/side-bar.component.html
@@ -7,6 +7,7 @@
     <li><a routerLink="myenrollments">Mis Inscripciones</a></li>
     <li><a routerLink="mypayments">Historial de pagos</a></li>
     <li><a routerLink="create-course">Crear Curso</a></li>
-
+    <li><a routerLink="create-user-role">Asignar Docente</a></li>
+    <li><a routerLink="view-course">Ver curso</a></li>
   </ul>
 </nav>
