--- a/front/src/app/views/my-grades/my-grades.component.html
+++ b/front/src/app/views/my-grades/my-grades.component.html
@@ -5,15 +5,17 @@
 
         <div class="head-table">
             <p>Materia</p>
-            <p class="number">1er parcial</p>
+            <p class="number">Nota</p>
         </div>
-        <div *ngFor="let g of myGrades" >
-            <p>{{g.type}}</p>
-            <p class="number">{{g.value}}</p>
-            
-            
-            
-        </div>
+
+            <div *ngFor="let g of grades" >
+                <p class=>{{g.name}}</p>    
+                <p class="number">{{g.value}}</p> 
+
+            </div>
+
+
+
         
     </div>
 </section>
