--- a/front/src/app/views/create-course/create-course.component.html
+++ b/front/src/app/views/create-course/create-course.component.html
@@ -20,7 +20,7 @@
             <input type="text" placeholder="Una breve descripcion sobre el curso" formControlName="description">
         </div>
 
-         <!--    /////////////////////////   -->
+         <!--    ///////////////////////// 
         <div class="formCamp">
             <label for="">Categoría</label>
             <div *ngIf="category_GET.invalid && (category_GET.dirty || category_GET.touched)"  class="control" >
@@ -28,8 +28,23 @@
             </div>
             <input type="text" placeholder="A que categoría partenece el curso" formControlName="category">
         </div>
+          -->
 
-         
+          <!--    /////////////////////////  --> 
+        <div class="formCamp">
+            <label for="">Categoría</label>
+            <select formControlName="category" >
+                <option value="">-- Selecione una opción --</option>
+                <option value="Programación">Programación</option>
+                <option value="Diseño">Diseño</option>
+                <option value="Marketing">Marketing</option>
+                <option value="Negocios">Negocios</option>
+                <option value="Idiomas">Idiomas</option>
+            </select>
+           <div *ngIf="category_GET.invalid && (category_GET.dirty || category_GET.touched)"  class="control" >
+                <p *ngIf="category_GET.hasError('required')" class="control" > (Este campo es requerido)</p>
+            </div>
+            </div>
 
        
 
