--- a/front/src/app/views/course-view/course-view.component.css
+++ b/front/src/app/views/course-view/course-view.component.css
@@ -14,6 +14,12 @@
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   }
 
+select{
+    margin: .5rem 1rem ;
+    padding: .5rem;
+    font-weight: 600;
+
+}
 section{
     margin: 1rem;
     border: 1px solid #00339e50;
