--- a/front/src/app/core/footer/footer.component.css
+++ b/front/src/app/core/footer/footer.component.css
@@ -85,6 +85,16 @@ footer {
   background-color: #00339E; /* Azul */
 }
 
+/* ⚡ Línea de derechos de autor */
+.footer-bottom {
+  
+  padding: 15px;
+  font-size: 0.9rem;
+  color: #ffffff;
+  text-align: center;
+  margin-top: 20px;
+}
+
 /* 📱 Estilos responsivos */
 @media (max-width: 768px) {
   .footer-container {
@@ -97,12 +107,8 @@ footer {
   }
 }
 
-/* ⚡ Línea de derechos de autor */
-.footer-bottom {
+@media (max-width : 430px) {
   
-  padding: 15px;
-  font-size: 0.9rem;
-  color: #ffffff;
-  text-align: center;
-  margin-top: 20px;
 }
+
+
