--- a/front/src/app/views/courses/courses.component.css
+++ b/front/src/app/views/courses/courses.component.css
@@ -64,7 +64,8 @@
 
 .course-card {
   width: calc(16.66% - 20px); /* 6 tarjetas por fila (100% / 6 = 16.66%) */
-  max-width: 250px; /* Evita que las tarjetas sean demasiado grandes */
+  max-width: 250px;
+ 
 }
 /* Estilos para el título de los cursos */
 .courses-title {
@@ -82,8 +83,8 @@
 }
 
 .course-card {
-    background-color: #f5f5f5; /* Color de fondo de la tarjeta */
-    border: 1px solid #FC6A07; /* Borde de la tarjeta */
+  background: linear-gradient(135deg, #6564cc, #00339e); 
+    border: 1px solid #010163; /* Borde de la tarjeta */
     border-radius: 8px; /* Esquinas redondeadas */
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Sombra para dar profundidad */
     overflow: hidden;
@@ -107,13 +108,13 @@
   
   .course-card-title {
     font-size: 1.5rem;
-    color: #00339E; /* Color del título */
+    color: #FC6A07; /* Color del título */
     margin-bottom: 8px;
   }
   
   .course-card-text {
     font-size: 1rem;
-    color: #333; /* Color del texto */
+    color: #fff; /* Color del texto */
     margin-bottom: 16px;
   }
   
@@ -152,11 +153,11 @@
     left: 50%;
     transform: translate(-50%, -50%);
     background: rgba(101, 100, 204, 0.9);
-    
     padding: 20px;
     border-radius: 8px;
     color: white;
     max-width: 500px;
+    width: 300px;
     z-index: 1000;
   }
   
@@ -203,7 +204,16 @@
   .courses-container{
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
     padding-top: 50px;
+  }
+
+  .categories-list{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
   }
 }
 
