--- a/front/src/app/views/my-enrollments/my-enrollments.component.html
+++ b/front/src/app/views/my-enrollments/my-enrollments.component.html
@@ -2,12 +2,13 @@
 
 <ul *ngIf="userCourses && userCourses.length > 0; else noCourses">
   <li *ngFor="let registration of userCourses">
-    <h3>Inscripción #{{ registration.registration_id }}</h3>
+    <h3>Inscripción {{ registration.registration_id }}</h3>
     <p><strong>ID del Curso:</strong> {{ registration.course_id }}</p>
+    <p><strong>Nombre:</strong> {{ getCourseName(registration.course_id) }}</p>
     <p><strong>Fecha de Inscripción:</strong> {{ registration.registration_date | date: 'medium' }}</p>
   </li>
 </ul>
 
 <ng-template #noCourses>
-  <p>No estás inscrito en ningún curso aún.</p>
+  <p class="no-courses">No estás inscrito en ningún curso aún.</p>
 </ng-template>
