--- a/front/src/app/core/side-bar/side-bar.component.css
+++ b/front/src/app/core/side-bar/side-bar.component.css
@@ -4,7 +4,8 @@
     background-color: #00339E;
     height: 100vh;
     padding: 20px;
-    box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1); 
+    
+    
   }
   
   .sidebar ul {
@@ -13,7 +14,8 @@
   }
   
   .sidebar ul li {
-    margin-bottom: 30px; 
+    margin-bottom: 30px;
+    margin-top: 40px; 
   }
   
   .sidebar ul li a {
@@ -32,4 +34,6 @@
     background-color: #FC6A07; 
     color: #ffffff;
   }
+
+ 
   
