--- a/front/src/app/views/dashboard-content/dashboard-content.component.html
+++ b/front/src/app/views/dashboard-content/dashboard-content.component.html
@@ -1,12 +1,21 @@
 <div class="dashboard-container">
     
-    <app-side-bar></app-side-bar>
-  
-    
-    <div class="main-content">
-      
-      <router-outlet></router-outlet>
 
-    </div>
-  </div>
+  <button  class="menu-toggle" [ngClass]="{'movimiento': sidebarOpen}" (click)="toggleSidebar()">        {{ sidebarOpen ? '▼' : '▲' }}
+  </button> 
+  <!-- Sidebar con clase dinámica para responsivo -->
+  <app-side-bar [ngClass]="{'active': sidebarOpen}" >
+
+      <!-- Botón de menú hamburguesa para móviles -->
   
+  </app-side-bar>
+
+  <!-- Contenido principal -->
+  <div class="main-content">
+    <router-outlet></router-outlet>
+  </div>
+
+</div>
+
+
+
