--- a/front/src/app/core/side-bar/side-bar.component.html
+++ b/front/src/app/core/side-bar/side-bar.component.html
@@ -1,13 +1,13 @@
 <nav class="sidebar">
   <ul>
-    <li ><a routerLink="profile">Mi Perfil</a></li>
-    <li ><a routerLink="mycourses">Mis Cursos</a></li>
-    <li ><a routerLink="attendance">Mis Asistencias</a></li>
-    <li ><a routerLink="mygrades">Mis Notas</a></li>
-    <li ><a routerLink="myenrollments">Mis Inscripciones</a></li>
-    <li ><a routerLink="view-course">Ver curso</a></li>
-    <li ><a routerLink="mypayments">Historial de pagos</a></li>
-    <li ><a routerLink="create-course">Crear Curso</a></li>
-    <li ><a routerLink="create-user-role">Asignar Docente</a></li>
+    <li><a routerLink="profile" (click)="onItemClick()">Mi Perfil</a></li>
+    <li><a routerLink="mycourses" (click)="onItemClick()">Mis Cursos</a></li>
+    <li><a routerLink="attendance" (click)="onItemClick()">Mis Asistencias</a></li>
+    <li><a routerLink="mygrades" (click)="onItemClick()">Mis Notas</a></li>
+    <li><a routerLink="myenrollments" (click)="onItemClick()">Mis Inscripciones</a></li>
+    <li><a routerLink="view-course" (click)="onItemClick()">Ver curso</a></li>
+    <li><a routerLink="mypayments" (click)="onItemClick()">Historial de pagos</a></li>
+    <li><a routerLink="create-course" (click)="onItemClick()">Crear Curso</a></li>
+    <li><a routerLink="create-user-role" (click)="onItemClick()">Asignar Docente</a></li>
   </ul>
 </nav>
