--- a/front/src/app/views/home/home.component.css
+++ b/front/src/app/views/home/home.component.css
@@ -287,7 +287,15 @@ body {
 /* 🔹 Responsividad */
 
 
+@media (max-width : 430px) {
+  .caract-cont{
+    max-width: 300px;
+  }
 
+  .benef-art{
+    margin-top: 10px;
+  }
+}
 
 @media (max-width: 600px) {
   .carousel-container {
