--- a/front/src/app/views/home/home.component.html
+++ b/front/src/app/views/home/home.component.html
@@ -94,7 +94,7 @@
   <section class="beneficios">
     <div class="benef">
       
-      <div>
+      <div class="benef-art">
         <h2>¿Por qué elegirnos?</h2>
     <ul>
       <li>✅ Acceso 24/7</li>
@@ -103,7 +103,7 @@
     </ul>
     
       </div>
-      <div >
+      <div  class="benef-art">
         <h2>Nuestros sevicios</h2>
           <ul>
             <li>✅ Espacios de coworking equipados.</li>
@@ -111,8 +111,7 @@
             <li>✅ Programas de formación y capacitación.</li>
           </ul>
       </div>
-
-      <div>
+      <div class="benef-art">
         <h2>Nuestros valores</h2>
   <ul>
     <li>🤝 Compromiso con la innovación</li>
