--- a/front/src/app/views/profile/profile.component.css
+++ b/front/src/app/views/profile/profile.component.css
@@ -100,3 +100,50 @@
   justify-content: space-between;
   margin-top: 20px;
 }
+
+
+
+.password-container {
+  max-width: 400px;
+  margin: auto;
+  padding: 20px;
+  background: #f9f9f9;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.password-container:hover {
+  transform: translateY(-5px);
+  box-shadow: 0 8px 16px rgba(252, 106, 7, 0.3);
+}
+
+
+.password-container label {
+  display: block;
+  font-weight: bold;
+  margin-bottom: 5px;
+}
+
+.password-container input {
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+.password-container button {
+  background: #fc6a07;
+  color: white;
+  border: none;
+  padding: 10px;
+  width: 100%;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 16px;
+}
+
+.password-container button:hover {
+  background: #00339e;
+}
