fixeo de header

--- a/front/src/app/views/course-view/course-view.component.css
+++ b/front/src/app/views/course-view/course-view.component.css
@@ -44,6 +44,7 @@ input, textarea{
 .category{
     display: inline-block;
     background-color: #fc6a07;
+    border-radius: 5px;
     padding: .5rem;
     color: white;
 }
