--- a/front/src/app/views/course-view/course-view.component.html
+++ b/front/src/app/views/course-view/course-view.component.html
@@ -35,7 +35,7 @@
         <button (click)="editarDescripcionTrue()" >Editar descripcion del curso</button>
     </div>
 
-
+    <button [routerLink]="['/dashboard/myenrollments']">Volver a inscripción</button>
 </section>
 
 
