funcionalidad de carga de notas en el panel de docente completa

--- a/front/src/app/views/course-view/course-view.component.html
+++ b/front/src/app/views/course-view/course-view.component.html
@@ -90,8 +90,7 @@
 <section class="sec_notes" *ngIf="esDocente">
     <div>
         <h3>Administrar calificaciones</h3>
-        <button type="submit" (click)="toGrades()" >Asignar calificaciones</button>
-        <button >Consultar calificaciones del curso</button>
+        <button type="submit" (click)="toGrades()" >Asignar y consultar calificaciones</button>
     </div>
 </section>
 
