--- a/front/src/app/views/register/register.component.html
+++ b/front/src/app/views/register/register.component.html
@@ -68,7 +68,7 @@
         <hr />
 
         <div class="links">
-          <a routerLink="/login">¿Ya tienes una cuenta? ¡Acceso!</a>
+          <a href="/login">¿Ya tienes una cuenta? ¡Acceso!</a>
         </div>
       </form>
     </div>
