terminando los footer links

--- a/front/src/app/core/footer/footer.component.html
+++ b/front/src/app/core/footer/footer.component.html
@@ -32,9 +32,9 @@
       <section class="footer-legal">
           <h3>Información Legal</h3>
           <ul>
-              <li><a href="/terminos">Términos y Condiciones</a></li>
-              <li><a href="/privacidad">Política de Privacidad</a></li>
-              <li><a href="/cookies">Política de Cookies</a></li>
+              <li><a href="/terms">Términos y Condiciones</a></li>
+              <li><a href="/policies">Política de Privacidad</a></li>
+              <li><a href="/cookie-policies">Política de Cookies</a></li>
           </ul>
       </section>
 
