--- a/front/src/app/views/admin-grades/admin-grades.component.html
+++ b/front/src/app/views/admin-grades/admin-grades.component.html
@@ -2,21 +2,21 @@
     <h2 class="title">Notas de los alumnos</h2>
     <div class="cont" >
 
-        <div class="head-title">
-            <p>Nombre</p>
+        <div class="head-table">
+            <p>Apellido</p>
             <p>DNI</p>
             <p>Nota 1</p>
             <p>Nota 2</p>
         </div>
     
-        <div  *ngFor="let s of students" >
-            <p>{{s.alumno.name}} {{s.alumno.lastName}}</p>
+        <div class="student"  *ngFor="let s of students" >
+            <p>{{s.alumno.lastName}}</p>
             <p>{{s.alumno.dni}}</p>
     
             <div class="div_notas" *ngFor="let n of s.notas" >
                 <p>{{n.value}}</p>
             </div>
-            <div>
+            <div class="div_notas">
                 <form [formGroup]="formPOST" (ngSubmit)="addGrade(s.alumno.user_id)"  >    
                     <input formControlName="value" type="number">
                     <button type="submit" >Agregar nota</button>  
