--- a/front/src/app/views/course-view/course-view.component.css
+++ b/front/src/app/views/course-view/course-view.component.css
@@ -13,6 +13,9 @@
     box-sizing: border-box;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   }
+.borde{
+    border: 1px solid blue;
+}
 
 select{
     margin: .5rem 1rem ;
@@ -138,4 +141,19 @@ input, select, textarea {
         width: 100%;
         padding: 12px;
     }
+}
+
+.cont_grades{
+    border: 1px solid white;
+    border-radius: .5rem;
+}
+.grade_tit{
+    display: inline-block;
+}
+.grade_value{
+    display: inline-block;
+    margin: .5rem 1rem;
+}
+.cont_grade_tit{
+    margin: 0;
 }
