--- a/front/src/app/views/courses/courses.component.css
+++ b/front/src/app/views/courses/courses.component.css
@@ -1,9 +1,12 @@
-
+main{
+  height: 100vh;
+}
 .courses-intro {
   
   text-align: center;
   margin: 40px 20px;
   padding: 20px;
+  
   
 }
 .styled-divider {
