--- a/front/src/app/views/admin-attendance/admin-attendance.component.html
+++ b/front/src/app/views/admin-attendance/admin-attendance.component.html
@@ -13,11 +13,12 @@
             <p>{{s.alumno.dni}}</p>
     
             <div class="div_notas" *ngFor="let s of s.asistencias" >
-                <p>O</p>
+                <p>{{s.date}}</p>
             </div>
     
                 <div class="div_notas">
                     <form [formGroup]="formPOST" (ngSubmit)="addAssistance(s.alumno.user_id)"  >    
+                        <input type="date" formControlName="date">
                         <button type="submit" >Agregar asistencia</button>  
                     </form>
                 </div>        
